// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CategoryCard /> Display the component 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderRadius": 14,
      "flexDirection": "row",
      "height": "15%",
      "marginHorizontal": 4,
      "marginTop": 16,
      "opacity": 1,
      "paddingHorizontal": 4,
    }
  }
  testID="task_category_click"
>
  <View
    style={
      [
        {
          "borderRadius": 20,
          "height": 16,
          "width": 16,
        },
        {
          "backgroundColor": "red",
        },
      ]
    }
  />
  <Text
    style={
      {
        "color": "#000000",
        "paddingHorizontal": 3,
      }
    }
  >
    Urgent
  </Text>
</View>
`;

exports[`Display the component 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderRadius": 14,
      "flexDirection": "row",
      "height": "15%",
      "marginHorizontal": 4,
      "marginTop": 16,
      "opacity": 1,
      "paddingHorizontal": 4,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "red",
        "borderRadius": 20,
        "height": 16,
        "width": 16,
      }
    }
  />
  <Text
    style={
      {
        "color": "#000000",
        "paddingHorizontal": 3,
      }
    }
  >
    Urgent
  </Text>
</View>
`;
